fixed some spacing with intro

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -209,14 +209,18 @@ body {
     .preamble {
         grid-column: 1/2;
         padding-left: $double-padding;
-        margin-top: $quad-margin;
     }
 
     @include for-tablet-landscape-up {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 40%;
+
+        .preamble {
+            grid-column: 1/2;
+            padding-right: $double-padding;
+        }
 
         .summary p:nth-last-of-type(1) {
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
         header h1::after {
@@ -233,7 +237,7 @@ body {
 
         .summary p {
             font-family: $details-font;
-            font-size: $heading-size;
+            font-size: 1.3em;
         }
     }
 }
@@ -318,7 +322,6 @@ body {
 
     footer {
         grid-column: 1/2;
-        grid-row: 1/2;
         justify-self: center;
         margin-top: $base-margin;
     }
@@ -410,10 +413,10 @@ body {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 gap: 5px;
-                text-align: left;
+                justify-items: center;
 
                 li {
-                    padding-left: 20px;
+                    text-align: center;
                     color: $color-six;
                     font-family: $details-font;
                     text-transform: capitalize;
